--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.10.2",
+    "@strapi/plugin-documentation": "^5.10.2",
     "@strapi/plugin-users-permissions": "5.10.2",
+    "@strapi/provider-email-nodemailer": "^5.10.2",
     "@strapi/strapi": "5.10.2",
     "pg": "8.8.0",
     "react": "^18.0.0",
