Fix npm production flag by using --omit=dev instead of deprecated config production

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "A Strapi application",
   "scripts": {
+    "install": "npm install --omit=dev",
     "build": "strapi build",
     "deploy": "strapi deploy",
     "develop": "strapi develop",
