--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": ">=18.0.0 <=22.x.x",
+    "node": "20.18.1",
     "npm": ">=6.0.0"
   },
   "strapi": {
